Fix ULID constraint violation and enhance RFQ functionality